deploy/ui2/56-backup-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui2-backup
  namespace: ui2
  labels:
    app.kubernetes.io/part-of: nexus-ui2
    app.kubernetes.io/component: backup
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/part-of: nexus-ui2
    app.kubernetes.io/component: backup
  ports:
    - name: http
      port: 8086
      targetPort: http
